KOGITO-3931 Validate data input/output types for message related nodes (#1626)